# silverback

./: .bazelccrc  .clangd  .gitignore  LICENSE  MODULE.bazel  README.md  context.md
broker/: README.md
broker/docs/: broker.md  flows.md  operator-states.drawio  robot-states.drawio  session-states.drawio  states.md  strenghts-and-gaps.md
contracts/command/: BUILD.bazel  joint.h  twist.h
docs/: general-architecture.md
misc/: bazel.md
operator/: README.md
operator/node/: BUILD.bazel  main.cc
robot/node/: BUILD.bazel  main.cc
